<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

        <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/greeting" />
    
    <!-- A Coefficient -->
    <EditText
        android:id="@+id/a_coeff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:inputType="phone"
       	android:ems="10"
        android:hint="@string/a_coeff" />

	<!--  B Coefficient -->
    <EditText
        android:id="@+id/b_coeff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_below="@+id/a_coeff"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/b_coeff" />

	<!-- C Coefficient -->
    <EditText
        android:id="@+id/c_coeff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_below="@+id/b_coeff"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/c_coeff" />

    <!-- Submit Button -->

    <Button
        android:id="@+id/submit_coeff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/c_coeff"
        android:layout_below="@+id/c_coeff"
        android:layout_marginTop="28dp"
        android:onClick="solveEq"
        android:text="@string/submit_coeff" />

   	 <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submit_coeff"
        android:layout_alignBottom="@+id/submit_coeff"
        android:layout_alignRight="@+id/c_coeff"
        android:text="@string/resetButton" />

   	 <Button
   	     android:id="@+id/solveWithSolutionButton"
   	     android:layout_width="wrap_content"
   	     android:layout_height="wrap_content"
   	     android:layout_below="@+id/resetButton"
   	     android:layout_centerHorizontal="true"
   	     android:layout_marginTop="21dp"
   	     android:text="@string/solve_with_solution"
   	     android:onClick="solveWithSolution" />

</RelativeLayout>
